Command Pages and Some Changes
- Some changes in index.js and app.js
- Added add-command page. But not functional right now.
- User adding error solved.
- Some improvements in README.md
- Some minor changes in main.css

--- a/settings.html
+++ b/settings.html
@@ -24,7 +24,7 @@
 
     <!-- Content -->
     <div id="content">
-        <div class="settingsPage">
+        <div class="sub settingsPage">
             <form onsubmit="return submitSettings();">
                 <input type="text" id="username" name="username" placeholder="Username">
                 <input type="password" id="token" name="token" placeholder="OAuth Token">
