Add and Delete Command Functionality
- Add and delete command functionality added.
- Made some minor changes.

--- a/add-command.html
+++ b/add-command.html
@@ -26,14 +26,14 @@
     <div id="content">
         <div class="sub addCommandPage">
             <form onsubmit="return submitCommand();">
-                <input type="text" id="command" name="username" placeholder="Command">
-                <input type="text" id="description" name="channel" placeholder="Description">
-                <input type="text" id="output" name="channel" placeholder="Output">
-                <input type="text" id="interval" name="channel" placeholder="Interval (Optional)">
-                <input type="text" id="limit" name="channel" placeholder="Limit (Optional)">
-                <input type="text" id="argc" name="channel" placeholder="Argument Count (Optional)">
-                <input type="text" id="script" name="channel" placeholder="Script (Optional)">
-                <input type="submit" name="submit" value="Save">
+                <input type="text" id="command" name="command" placeholder="Command">
+                <input type="text" id="description" name="description" placeholder="Description">
+                <input type="text" id="output" name="output" placeholder="Output">
+                <input type="text" id="interval" name="interval" placeholder="Interval (Optional)">
+                <input type="text" id="limit" name="limit" placeholder="Limit (Optional)">
+                <input type="text" id="argc" name="argc" placeholder="Argument Count (Optional)">
+                <input type="text" id="script" name="script" placeholder="Script (Optional)">
+                <input type="submit" name="submit" value="Add Command">
             </form>
         </div>
     </div>
