Points Page Added and package.json Updated
- Points page added.
- package.json updated.
- alert box added to other sub pages.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </a>
             </li>
             <li class="points">
-                <a href="javascript:points();">
+                <a href="javascript:pointsPage();">
                     <img src="inc/images/points.png" alt="">
                     <span>Points</span>
                 </a>
