--- a/settings.html
+++ b/settings.html
@@ -24,6 +24,11 @@
 
     <!-- Content -->
     <div id="content">
+        <!-- Alert Box -->
+        <div class="alertBox"></div>
+        <!-- //Alert Box -->
+
+        <!-- settingsPage -->
         <div class="sub settingsPage">
             <form onsubmit="return submitSettings();">
                 <input type="text" id="username" name="username" placeholder="Username">
@@ -32,6 +37,7 @@
                 <input type="submit" name="submit" value="Save">
             </form>
         </div>
+        <!-- //settingsPage -->
     </div>
     <!-- //Content -->
 
