--- a/add-command.html
+++ b/add-command.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="inc/css/main.css">
     <script src="lib/app.js"></script>
   </head>
-  <body onload="getSettings();">
+  <body>
     
     <!-- Header -->
     <div id="header">
