--- a/commands.html
+++ b/commands.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="inc/css/main.css">
     <script src="lib/app.js"></script>
   </head>
-  <body>
+  <body onload="getCommandList();">
     
     <!-- Header -->
     <div id="header">
